cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_393.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/bio_b64.c:537: error: DEAD_STORE
  The value written to &ret (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/evp/bio_b64.c:537:5: Write of unused value
535.   static long b64_callback_ctrl(BIO *b, int cmd, BIO_info_cb *fp)
536.   {
537.       long ret = 1;
           ^
538.       BIO *next = BIO_next(b);
539.   
